checkout page rent reorg for future bitcoin implementation, fixed ticker present tense wording, fixed scrollbar jump on mylistings and checkout
Former-commit-id: 7d18b84413b6a15e529914f64372bac25442ce9d

--- a/server/public/css/master.css
+++ b/server/public/css/master.css
@@ -3747,6 +3747,10 @@ input:-webkit-autofill {
 .min-height {
   min-height: calc(100vh - 125px); }
 
+.prevent-scroll-jump {
+  width: 100vw;
+  overflow-x: hidden; }
+
 .clear-nav {
   padding-top: 60px; }
 
